[gd_scene load_steps=91 format=2]

[ext_resource path="res://robo.gd" type="Script" id=1]
[ext_resource path="res://Sprites Robô/png/Slide (1).png" type="Texture" id=2]
[ext_resource path="res://Sprites Robô/png/Slide (2).png" type="Texture" id=3]
[ext_resource path="res://Sprites Robô/png/Slide (3).png" type="Texture" id=4]
[ext_resource path="res://Sprites Robô/png/Slide (4).png" type="Texture" id=5]
[ext_resource path="res://Sprites Robô/png/Slide (5).png" type="Texture" id=6]
[ext_resource path="res://Sprites Robô/png/Slide (6).png" type="Texture" id=7]
[ext_resource path="res://Sprites Robô/png/Slide (7).png" type="Texture" id=8]
[ext_resource path="res://Sprites Robô/png/Slide (8).png" type="Texture" id=9]
[ext_resource path="res://Sprites Robô/png/Slide (9).png" type="Texture" id=10]
[ext_resource path="res://Sprites Robô/png/Slide (10).png" type="Texture" id=11]
[ext_resource path="res://Sprites Robô/png/Idle (1).png" type="Texture" id=12]
[ext_resource path="res://Sprites Robô/png/Idle (2).png" type="Texture" id=13]
[ext_resource path="res://Sprites Robô/png/Idle (3).png" type="Texture" id=14]
[ext_resource path="res://Sprites Robô/png/Idle (4).png" type="Texture" id=15]
[ext_resource path="res://Sprites Robô/png/Idle (5).png" type="Texture" id=16]
[ext_resource path="res://Sprites Robô/png/Idle (6).png" type="Texture" id=17]
[ext_resource path="res://Sprites Robô/png/Idle (7).png" type="Texture" id=18]
[ext_resource path="res://Sprites Robô/png/Idle (8).png" type="Texture" id=19]
[ext_resource path="res://Sprites Robô/png/Idle (9).png" type="Texture" id=20]
[ext_resource path="res://Sprites Robô/png/Idle (10).png" type="Texture" id=21]
[ext_resource path="res://Sprites Robô/png/Jump (1).png" type="Texture" id=22]
[ext_resource path="res://Sprites Robô/png/Jump (2).png" type="Texture" id=23]
[ext_resource path="res://Sprites Robô/png/Jump (3).png" type="Texture" id=24]
[ext_resource path="res://Sprites Robô/png/Jump (4).png" type="Texture" id=25]
[ext_resource path="res://Sprites Robô/png/Jump (5).png" type="Texture" id=26]
[ext_resource path="res://Sprites Robô/png/Jump (6).png" type="Texture" id=27]
[ext_resource path="res://Sprites Robô/png/Jump (7).png" type="Texture" id=28]
[ext_resource path="res://Sprites Robô/png/Jump (8).png" type="Texture" id=29]
[ext_resource path="res://Sprites Robô/png/Jump (9).png" type="Texture" id=30]
[ext_resource path="res://Sprites Robô/png/Jump (10).png" type="Texture" id=31]
[ext_resource path="res://Sprites Robô/png/Run (1).png" type="Texture" id=32]
[ext_resource path="res://Sprites Robô/png/Run (2).png" type="Texture" id=33]
[ext_resource path="res://Sprites Robô/png/Run (3).png" type="Texture" id=34]
[ext_resource path="res://Sprites Robô/png/Run (4).png" type="Texture" id=35]
[ext_resource path="res://Sprites Robô/png/Run (5).png" type="Texture" id=36]
[ext_resource path="res://Sprites Robô/png/Run (6).png" type="Texture" id=37]
[ext_resource path="res://Sprites Robô/png/Run (7).png" type="Texture" id=38]
[ext_resource path="res://Sprites Robô/png/Run (8).png" type="Texture" id=39]
[ext_resource path="res://Sprites Robô/png/JumpMelee (1).png" type="Texture" id=40]
[ext_resource path="res://Sprites Robô/png/JumpMelee (2).png" type="Texture" id=41]
[ext_resource path="res://Sprites Robô/png/JumpMelee (3).png" type="Texture" id=42]
[ext_resource path="res://Sprites Robô/png/JumpMelee (4).png" type="Texture" id=43]
[ext_resource path="res://Sprites Robô/png/JumpMelee (5).png" type="Texture" id=44]
[ext_resource path="res://Sprites Robô/png/JumpMelee (6).png" type="Texture" id=45]
[ext_resource path="res://Sprites Robô/png/JumpMelee (7).png" type="Texture" id=46]
[ext_resource path="res://Sprites Robô/png/JumpMelee (8).png" type="Texture" id=47]
[ext_resource path="res://Sprites Robô/png/Melee (1).png" type="Texture" id=48]
[ext_resource path="res://Sprites Robô/png/Melee (2).png" type="Texture" id=49]
[ext_resource path="res://Sprites Robô/png/Melee (3).png" type="Texture" id=50]
[ext_resource path="res://Sprites Robô/png/Melee (4).png" type="Texture" id=51]
[ext_resource path="res://Sprites Robô/png/Melee (5).png" type="Texture" id=52]
[ext_resource path="res://Sprites Robô/png/Melee (6).png" type="Texture" id=53]
[ext_resource path="res://Sprites Robô/png/Melee (7).png" type="Texture" id=54]
[ext_resource path="res://Sprites Robô/png/Melee (8).png" type="Texture" id=55]
[ext_resource path="res://Sprites Robô/png/RunShoot (1).png" type="Texture" id=56]
[ext_resource path="res://Sprites Robô/png/RunShoot (2).png" type="Texture" id=57]
[ext_resource path="res://Sprites Robô/png/RunShoot (3).png" type="Texture" id=58]
[ext_resource path="res://Sprites Robô/png/RunShoot (4).png" type="Texture" id=59]
[ext_resource path="res://Sprites Robô/png/RunShoot (5).png" type="Texture" id=60]
[ext_resource path="res://Sprites Robô/png/RunShoot (6).png" type="Texture" id=61]
[ext_resource path="res://Sprites Robô/png/RunShoot (7).png" type="Texture" id=62]
[ext_resource path="res://Sprites Robô/png/RunShoot (8).png" type="Texture" id=63]
[ext_resource path="res://Sprites Robô/png/RunShoot (9).png" type="Texture" id=64]
[ext_resource path="res://Sprites Robô/png/Dead (1).png" type="Texture" id=65]
[ext_resource path="res://Sprites Robô/png/Dead (2).png" type="Texture" id=66]
[ext_resource path="res://Sprites Robô/png/Dead (3).png" type="Texture" id=67]
[ext_resource path="res://Sprites Robô/png/Dead (4).png" type="Texture" id=68]
[ext_resource path="res://Sprites Robô/png/Dead (5).png" type="Texture" id=69]
[ext_resource path="res://Sprites Robô/png/Dead (6).png" type="Texture" id=70]
[ext_resource path="res://Sprites Robô/png/Dead (7).png" type="Texture" id=71]
[ext_resource path="res://Sprites Robô/png/Dead (8).png" type="Texture" id=72]
[ext_resource path="res://Sprites Robô/png/Dead (9).png" type="Texture" id=73]
[ext_resource path="res://Sprites Robô/png/Dead (10).png" type="Texture" id=74]
[ext_resource path="res://Sprites Robô/png/JumpShoot (1).png" type="Texture" id=75]
[ext_resource path="res://Sprites Robô/png/JumpShoot (2).png" type="Texture" id=76]
[ext_resource path="res://Sprites Robô/png/JumpShoot (3).png" type="Texture" id=77]
[ext_resource path="res://Sprites Robô/png/JumpShoot (4).png" type="Texture" id=78]
[ext_resource path="res://Sprites Robô/png/JumpShoot (5).png" type="Texture" id=79]
[ext_resource path="res://Sprites Robô/png/Shoot (1).png" type="Texture" id=80]
[ext_resource path="res://Sprites Robô/png/Shoot (2).png" type="Texture" id=81]
[ext_resource path="res://Sprites Robô/png/Shoot (3).png" type="Texture" id=82]
[ext_resource path="res://Sprites Robô/png/Shoot (4).png" type="Texture" id=83]
[ext_resource path="res://Áudios/tiro_fx.ogg" type="AudioStream" id=84]
[ext_resource path="res://Áudios/run_fx.ogg" type="AudioStream" id=85]
[ext_resource path="res://Sprites Robô/coração.png" type="Texture" id=86]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "slide",
"speed": 20.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 22 ), null, ExtResource( 23 ), null, ExtResource( 24 ), null, ExtResource( 25 ), null, ExtResource( 26 ), null, ExtResource( 27 ), null, ExtResource( 28 ), null, ExtResource( 29 ), null, ExtResource( 30 ), null, ExtResource( 31 ), null ],
"loop": true,
"name": "jump(dano)",
"speed": 30.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ) ],
"loop": true,
"name": "run",
"speed": 20.0
}, {
"frames": [ ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ) ],
"loop": true,
"name": "jumpmelee",
"speed": 15.0
}, {
"frames": [ ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ) ],
"loop": true,
"name": "melee",
"speed": 15.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ) ],
"loop": true,
"name": "jump",
"speed": 15.0
}, {
"frames": [ ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ) ],
"loop": true,
"name": "runshot",
"speed": 20.0
}, {
"frames": [ ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ) ],
"loop": true,
"name": "dead",
"speed": 15.0
}, {
"frames": [ ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ) ],
"loop": true,
"name": "jumpshot",
"speed": 15.0
}, {
"frames": [ ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ) ],
"loop": true,
"name": "shot",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 23.25
height = 392.093

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 202.131 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 12.1746, 10 )

[node name="bot" type="Node2D"]

_sections_unfolded = [ "Transform" ]

[node name="robo" type="KinematicBody2D" parent="." index="0"]

position = Vector2( 198.545, 483.613 )
scale = Vector2( 0.3, 0.3 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="asprite" type="AnimatedSprite" parent="robo" index="0"]

position = Vector2( 19.408, -88.986 )
frames = SubResource( 1 )
animation = "idle"
offset = Vector2( 0.2, 0.2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="robo" index="1"]

position = Vector2( 7.55264, -75.5908 )
scale = Vector2( 3.26951, 1.03299 )
shape = SubResource( 2 )

[node name="Position2DR" type="Position2D" parent="robo" index="2"]

position = Vector2( 186.437, -89.0083 )

[node name="Position2DL" type="Position2D" parent="robo" index="3"]

position = Vector2( -147.699, -93.6626 )

[node name="Camera2D" type="Camera2D" parent="robo" index="4"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="Area2D" type="Area2D" parent="robo" index="5"]

position = Vector2( -1.98351, -76.8627 )
scale = Vector2( 9.53608, 1.16545 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="robo/Area2D" index="0"]

position = Vector2( 0, -3.28032 )
scale = Vector2( 1, 0.984009 )
shape = SubResource( 3 )

[node name="Area2D2" type="Area2D" parent="robo" index="6"]

position = Vector2( 7.79449, 160.184 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="robo/Area2D2" index="0"]

position = Vector2( -2.07601, -7.11548 )
scale = Vector2( 8.51373, 0.452655 )
shape = SubResource( 4 )

[node name="tiro" type="AudioStreamPlayer" parent="robo" index="7"]

stream = ExtResource( 84 )
volume_db = -0.09
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="corrida" type="AudioStreamPlayer2D" parent="robo" index="8"]

stream = ExtResource( 85 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="CanvasLayer" type="CanvasLayer" parent="." index="1"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 0.1, 0.1 )
transform = Transform2D( 0.1, 0, 0, 0.1, 0, 0 )

[node name="Sprite1" type="Sprite" parent="CanvasLayer" index="0"]

position = Vector2( 461.246, 447.68 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 86 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite2" type="Sprite" parent="CanvasLayer" index="1"]

position = Vector2( 1358.09, 442.473 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 86 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite3" type="Sprite" parent="CanvasLayer" index="2"]

position = Vector2( 2248.39, 448.375 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 86 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[connection signal="body_entered" from="robo/Area2D" to="robo" method="_on_Area2D_body_entered"]

[connection signal="body_entered" from="robo/Area2D2" to="robo" method="_on_Area2D2_body_entered"]


